Didn't see the logo-imageand fixed the code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </header>
 
             <div class="container">
-                <h1 class="headerTitle">SODA</h1>
+                <img src="slices/logo_soda.png">
                 <br><br> 
                 <h2 class="headerMoto">PUSHING BOUNDARIES, <br> REALISING IDEAS.</h2>
             </div>
@@ -80,7 +80,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <form>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="emailaddress1"  placeholder="EMAIL ADDRESS" style="">
+                            <input type="email" class="form-control" id="emailaddress1"  placeholder="EMAIL ADDRESS">
                             <input type="text" class="form-control" id="name1"  placeholder="NAME">
                             <input type="text" class="form-control" id="message1"  placeholder="MESSAGE">
                             <a href="#" class="button" ><p>SUBMIT</a>
